Kubernetes-notes/12.Ingress/02.SelfSignSSL/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-router
  annotations:
    kubernetes.io/ingress.class: "gce"
    external-dns.alpha.kubernetes.io/hostname: app.bjohn.online
    networking.gke.io/v1beta1.FrontendConfig: "my-frontend-config"
spec:
  tls:
    - secretName: app-cert
    - secretName: app1-cert
    - secretName: app2-cert
  defaultBackend:
    service:
      name: default-service
      port:
        number: 80
  rules:
    - host: app1.bjohn.online
      http:
        paths:
          - backend:
              service:
                name: app1-service
                port:
                  number: 80 
            path: /
            pathType: Prefix
    - host: app2.bjohn.online
      http:
        paths:
          - backend:
              service:
                name: app2-service
                port:
                  number: 80 
            path: /
            pathType: Prefix

---
